# fintech-banking-app

./: README.md  render.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: init_test_data.py  main_banking.py
backend/app/core/: config.py
backend/app/middleware/: csrf_protection.py  rate_limiter.py
backend/app/models/: core_models.py  enums.py  memory_models.py
backend/app/models/entities/: crypto_models.py  currency_converter_models.py  insurance_models.py  investment_models.py  loan_models.py  unified_models.py
backend/app/repositories/: credit_card_manager.py  crypto_manager.py  currency_converter_manager.py  data_manager.py  insurance_manager_memory.py  investment_manager.py  mock_data_generator.py
backend/app/risk_management/aml/models/: alert_models.py  case_models.py  customer_risk_models.py  entity_resolution_models.py  kyc_models.py  network_analysis_models.py  sanction_models.py  sar_models.py  transaction_pattern_models.py  watchlist_models.py
backend/app/risk_management/aml/services/: aml_workflow_service.py
backend/app/risk_management/audit/models/: committee_models.py  compliance_testing_models.py  external_audit_models.py  internal_audit_models.py  issue_management_models.py  policy_models.py
backend/app/risk_management/credit/models/: collateral_models.py  credit_limit_models.py  credit_score_models.py  exposure_models.py  loan_models.py  portfolio_models.py  rating_models.py  risk_parameter_models.py
backend/app/risk_management/data_quality/config/: mdm_config.py  notification_config.py  profiling_config.py  quality_thresholds.py  scheduling_config.py  validation_config.py
backend/app/risk_management/data_quality/models/: data_governance_models.py  data_quality_models.py  data_validation_models.py  master_data_models.py
backend/app/risk_management/data_quality/utils/: anomaly_detection.py  data_masking.py  data_reconciliation.py  data_sampling.py  lineage_graph.py  match_algorithms.py  schema_drift_detector.py  sla_monitoring.py  validation_engine.py
backend/app/risk_management/fraud/models/: behavior_models.py  device_models.py  fraud_alert_models.py  fraud_case_models.py  fraud_investigation_models.py  fraud_pattern_models.py  fraud_rule_models.py  ml_models.py
backend/app/risk_management/market/models/: commodity_models.py  equity_risk_models.py  fx_risk_models.py  greeks_models.py  interest_rate_models.py  position_models.py  stress_test_models.py  var_models.py
backend/app/risk_management/operational/models/: business_continuity_models.py  control_models.py  incident_models.py  kri_models.py  loss_event_models.py  rcsa_models.py  technology_risk_models.py  vendor_risk_models.py
backend/app/risk_management/regulatory/models/: basel_models.py  capital_models.py  consumer_protection_models.py  gdpr_models.py  kyc_models.py  reporting_models.py  sanctions_models.py  sox_models.py
backend/app/routes/: accounts.py  analytics.py  analytics_export.py  analytics_intelligence.py  budgets.py  cards.py  categories.py  contacts.py  conversations.py  crypto.py  goals.py  insurance.py  loans.py  notes.py  notifications.py  p2p.py  payment_methods.py  recurring.py  search.py  transactions.py
backend/app/services/: analytics_engine.py  audit_logger.py  event_schemas.py  event_sourcing.py  event_store.py  health_service.py  net_worth_valuation.py  portfolio_valuation.py  saga_pattern.py  spending_aggregator.py  transaction_coordinator.py
backend/app/storage/: memory_adapter.py
backend/tests/: conftest.py  conftest_fast.py  test_accounts.py  test_auth.py  test_budgets.py  test_cards.py  test_cross_module_consistency.py  test_endpoint_smoke.py  test_messages.py  test_security.py  test_subscriptions.py  test_transactions.py  test_users.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: LoginForm.tsx
frontend/src/contexts/: AlertContext.tsx  AuthContext.tsx  SecurityContext.tsx
frontend/src/hooks/: useErrorHandler.ts  useHoverTracking.ts  (+4 more)
(+129 files in other folders)
